<resources>
    <string name="app_name">EasyPay</string>
    <string name="credito">CRÉDITO</string>
    <string name="debito">DÉBITO</string>
    <string name="welcome">Bem-Vindo!</string>
    <string name="pagamento">Escolha sua forma de pagamento:</string>
    <string name="parcelas">Escolha a quantidade de parcelas:</string>
    <string name="desc">Descrição do pagamento</string>
    <string name="value_pay">Valor do pagamento</string>
    <string name="send_desc">ENVIAR</string>
    <string name="version">Versão</string>
    <string name="cancel">CANCELAR</string>
    <string name="finish">FINALIZAR</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>